--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,4 +1,6 @@
 // Define variables for your color scheme
+$brand-color: #D23333;
+$accent-color: purple;
 
 // For example:
 $red: #EE5F5B;
@@ -8,3 +10,8 @@ $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
+$regal-blue: #034378;
+$san-juan: #2d4e68;
+$bermuda: #77d7b9;
+$white: #fff;
+$black: #000;
