--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,19 @@
 // Specific CSS for your home-page
+
+body {
+  // background-image: linear-gradient(to right, $regal-blue, $san-juan);
+  // -webkit-font-smoothing: antialiased;
+  // -moz-osx-font-smoothing: grayscale;
+  // height: 100vh;
+  font-family: $open-sans;
+  background: #141414;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+h4 {
+  color: white;
+  margin-bottom: 0;
+}
