--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
+@import "config/mixins";
 
 // External libraries
 @import "bootstrap-sprockets";
@@ -13,3 +14,5 @@
 @import "layouts/index";
 @import "components/index";
 @import "pages/index";
+
+
