--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,3 +1,12 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
+@import "banner";
+@import "footer";
+@import "pub";
+@import "search";
+@import "slider";
+@import "modals";
+@import "forms";
+@import "buttons";
+@import "pubs_show";
