--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -6,6 +6,11 @@ $body-font: "Open Sans", "Helvetica", "sans-serif";
 $headers-font: "Raleway", "Helvetica", "sans-serif";
 $open-sans: 'Open Sans',
 sans-serif;
+$brand-font: $body-font;
+
+$base-size: 16px;
+$base-height: 1.4;
+
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
