--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -1,4 +1,6 @@
 .form-control {
-  background: rgba(20,20,20,0.6);
+  border:none;
+  padding:15px 20px;
+  background:rgba(255,255,255,.1);
   color: white;
 }
