--- a/app/views/crawls/_form.html.erb
+++ b/app/views/crawls/_form.html.erb
@@ -5,7 +5,7 @@
         <%= f.input :city %>
         <div class="form-row">
           <%= f.input :start_date, as: :string, wrapper_html: { :class => "inline_field_wrapper" } %>
-          <%= f.input :end_date, as: :string, wrapper_html: { :class => "inline_field_wrapper" } %>
+          <%= f.input :end_date, as: :string, disabled: true, wrapper_html: { :class => "inline_field_wrapper" } %>
         </div>
         <%= f.input :description %>
       </div>
