--- a/app/views/layouts/search.html.erb
+++ b/app/views/layouts/search.html.erb
@@ -14,6 +14,7 @@
     <%= yield %>
     <%= render 'shared/modal' %>
     <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&key=#{ENV['GOOGLE_API_BROWSER_KEY']}"%>
+    <%= javascript_include_tag "https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"%>
     <%= javascript_pack_tag 'application' %>
   </body>
 </html>
