--- a/app/views/pubs/_pub.html.erb
+++ b/app/views/pubs/_pub.html.erb
@@ -15,7 +15,7 @@
             </a>
           </li>
           <li>
-            <%= icon(current_user.likes?(pub) ? "fas" : "far" , "heart") %>
+            <%= icon(current_user.likes_pub?(pub) ? "fas" : "far" , "heart") %>
           </li>
           <li>
             <a href="#">
