--- a/app/views/pubs/_map_box.html.erb
+++ b/app/views/pubs/_map_box.html.erb
@@ -1,3 +1,5 @@
-<div><h5><%= pub.name %></h5><span><%= pub.id %></span></div>
-<div><p><%= pub.address %><p></div>
+<div class="map-box">
+  <h5><%= pub.name %></h5>
+  <p><%= pub.address %><p>
+</div>
 
