mapbox with custom markers and fly in

--- a/app/views/crawls/show.html.erb
+++ b/app/views/crawls/show.html.erb
@@ -12,5 +12,5 @@
 <div
   id="map"
   class="search-map"
-  data-markers="<%= @markers.to_json %>"
+  data-features="<%= @features.to_json %>"
 ></div>
