--- a/app/views/crawls/_crawl.html.erb
+++ b/app/views/crawls/_crawl.html.erb
@@ -1,6 +1,6 @@
-<div id="crawl-<%= crawl.id %>" class="card-row">
+<div id="crawl-<%= crawl.id %>" class="crawl card-row">
 <div class="card">
-  <div class="wrapper" style="background: linear-gradient(to bottom,rgba(20,20,20, 0.8),rgba(76,76,76,0.2) 30%), url(<%= crawl.pubs.first.photo || "https://tvseriescritic.files.wordpress.com/2016/10/stranger-things-bicycle-lights-children.jpg" %>) center / cover no-repeat;">
+  <div class="wrapper" style="background: linear-gradient(to bottom,rgba(20,20,20, 0.8),rgba(76,76,76,0.2) 30%), url(<%= crawl.pubs.sample.photo || "https://tvseriescritic.files.wordpress.com/2016/10/stranger-things-bicycle-lights-children.jpg" %>) center / cover no-repeat;">
     <div class="header">
       <% if crawl.start_date %>
         <div class="date">
