--- a/app/views/pubs/_pub.html.erb
+++ b/app/views/pubs/_pub.html.erb
@@ -1,4 +1,4 @@
-<div id="pub-<%= pub.id %>" class="card-row">
+<div id="pub-<%= pub.id %>" class="pub card-row">
 <div class="card">
   <div class="wrapper" style="background: linear-gradient(to bottom,rgba(20,20,20, 0.8),rgba(76,76,76,0.2) 30%), url(<%= pub.photo || "https://tvseriescritic.files.wordpress.com/2016/10/stranger-things-bicycle-lights-children.jpg" %>) center / cover no-repeat;">
     <div class="header">
