--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     </div>
     <%= render 'shared/footer' %>
     <%= render 'shared/modal' %>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&key=#{ENV['GOOGLE_API_BROWSER_KEY']}"%>
     <%= javascript_pack_tag 'application' %>
   </body>
 </html>
