--- a/app/views/pubs/_show.html.erb
+++ b/app/views/pubs/_show.html.erb
@@ -8,6 +8,7 @@
       <p><%= @pub.address %></p>
       <p><%= @pub.description %></p>
       <button id="closeButton" type="button" class="btn btn-base btn-clear">Close</button>
+      <%= link_to "Map", @pub, class: "btn btn-base btn-clear" %>
     </div>
   </div>
 </div>
