--- a/app/views/pubs/_pub.html.erb
+++ b/app/views/pubs/_pub.html.erb
@@ -1,38 +1,19 @@
-<div id="pub-<%= pub.id %>" class="pub card-row">
 <div class="card">
   <div class="wrapper" style="background: linear-gradient(to bottom,rgba(20,20,20, 0.8),rgba(76,76,76,0.2) 30%), url(<%= pub.photo || "https://tvseriescritic.files.wordpress.com/2016/10/stranger-things-bicycle-lights-children.jpg" %>) center / cover no-repeat;">
     <div class="header">
       <div class="date">
-        <span class="day"><%= pub.created_at.strftime("%d") %></span>
-        <span class="month"><%= pub.created_at.strftime("%b") %></span>
-        <span class="year"><%= pub.created_at.strftime("%Y") %></span>
+        <span class="day">15</span>
+        <span class="month">Jul</span>
+        <span class="year">2016</span>
       </div>
-      <% if current_user %>
-        <ul class="menu-content">
-          <li>
-            <a href="#">
-              <%= icon("far", "bookmark") %>
-            </a>
-          </li>
-          <li>
-            <%= icon(current_user.likes_pub?(pub) ? "fas" : "far" , "heart") %>
-          </li>
-          <li>
-            <a href="#">
-              <%= icon("far", "comment") %>
-            </a>
-          </li>
-        </ul>
-      <% end %>
     </div>
     <div class="data">
       <div class="content">
-        <span class="author"><%= pub.district %></span>
-        <h1 class="title"><a href="#"><%= pub.name %></a></h1>
-        <p class="text"><%= pub.description.truncate(105) if pub.description %></p>
-        <%= link_to "See more", pub, class: "button", remote: true %>
+        <span class="author">Netflix</span>
+        <h1 class="title"><a href="#">Stranger Things</a></h1>
+        <p class="text">When Joyce's 12-year-old son, Will, goes missing, she launches a terrifying investigation into his disappearance with local authorities. As they search for answers, they unravel a series of extraordinary mysteries involving secret government experiments, unnerving supernatural forces, and a very unusual little girl.</p>
+        <a href="" class="button">See more</a>
       </div>
     </div>
   </div>
-</div>
 </div>
